--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -8,5 +8,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          lob:
+            non_contextual_creation: true
     hibernate:
       ddl-auto: update
