--- a/server/build.gradle
+++ b/server/build.gradle
@@ -8,11 +8,14 @@ buildscript {
         maven { url 'https://repo.spring.io/milestone' }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}" as Object)
     }
 }
 
-apply plugin: 'java'
+plugins {
+    id 'java'
+    id 'com.gradle.build-scan' version '2.1'
+}
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
