--- a/server/build.gradle
+++ b/server/build.gradle
@@ -30,6 +30,11 @@ repositories {
     maven { url 'https://repo.spring.io/milestone' }
 }
 
+buildScan {
+    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
