--- a/server/build.gradle
+++ b/server/build.gradle
@@ -12,10 +12,11 @@ buildscript {
     }
 }
 
-plugins {
-    id 'java'
-    id 'com.gradle.build-scan' version '2.1'
-}
+//plugins {
+//    id 'java'
+//    id 'com.gradle.build-scan' version '2.1'
+//}
+apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -30,10 +31,10 @@ repositories {
     maven { url 'https://repo.spring.io/milestone' }
 }
 
-buildScan {
-    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-    termsOfServiceAgree = 'yes'
-}
+//buildScan {
+//    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+//    termsOfServiceAgree = 'yes'
+//}
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
