--- a/context/build.gradle
+++ b/context/build.gradle
@@ -18,5 +18,5 @@ buildScan {
 }
 
 dependencies {
-    compileOnly 'org.springframework:spring-context:5.1.5.RELEASE'
+    implementation 'org.springframework:spring-context:5.1.5.RELEASE'
 }
